--- a/app/src/main/res/layout/locker_window_content_layout.xml
+++ b/app/src/main/res/layout/locker_window_content_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/lockScreenContent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="4dp"
-    android:background="#55000000">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/unlockButton"
@@ -15,4 +14,14 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:src="@drawable/ic_screen_locker_tile" />
+
+    <ImageView
+        android:id="@+id/touchLockedImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_touch_locked"
+        android:contentDescription="@string/screen_locked_content_touch_locked"
+        tools:visibility="visible" />
 </RelativeLayout>
