--- a/app/src/main/res/layout/locker_window_content_layout.xml
+++ b/app/src/main/res/layout/locker_window_content_layout.xml
@@ -14,16 +14,16 @@
 
         <ImageView
             android:id="@+id/unlockButton"
-            android:layout_width="86dp"
-            android:layout_height="86dp"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:tint="@android:color/holo_red_dark"
             android:contentDescription="@string/foreground_notification_unlock_action"
-            android:layout_centerInParent="true"
             android:paddingStart="12dp"
             android:paddingEnd="8dp"
             android:paddingTop="12dp"
             android:paddingBottom="8dp"
-            android:src="@drawable/avd_unlock_button" />
+            android:src="@drawable/avd_unlock_button"
+            android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/unlockButtonProgress"
